# a2a-samples

./: a2a.json
demo/: README.md
demo/ui/: main.py
samples/python/agents/a2a-all-requests-without-framwork/: ENHANCED_DEMO_README.md  README.md  demo_inmemory_task_management.py  demo_task_management.py  demo_tasks.json  pyproject.toml  run_enhanced_demo.sh  test_json_task_store_compatibility.py
samples/python/agents/a2a-all-requests-without-framwork/src/: __init__.py
samples/python/agents/a2a-all-requests-without-framwork/src/a2a_all_requests/: __init__.py
samples/python/agents/a2a-all-requests-without-framwork/src/a2a_all_requests/enhanced_client/: __init__.py  enhanced_client.py
samples/python/agents/a2a-all-requests-without-framwork/src/a2a_all_requests/enhanced_server/: __init__.py  __main__.py  enhanced_agent_executor.py  enhanced_demo_tasks.json  json_task_store.py
samples/python/agents/a2a-mcp-without-framework/: .env.example  ENHANCED_DEMO_README.md  run_enhanced_demo.sh
samples/python/agents/a2a-mcp-without-framework/src/no_llm_framework/enhanced_client/: __init__.py  __main__.py  demo_file.txt  enhanced_client.py
samples/python/agents/a2a-mcp-without-framework/src/no_llm_framework/enhanced_server/: __init__.py  __main__.py  enhanced_agent.py
samples/python/agents/pydantic_ai/: README.md  pyproject.toml  simple_test.py
samples/python/agents/pydantic_ai/app/: __init__.py  __main__.py  agent.py  agent_executor.py  test_client.py
samples/python/agents/pydantic_ai/pydantic_ai_a2a_demo/: README.md  demo.py  requirements.txt  server1.py  server2.py
