[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-all-requests-demo"
version = "1.0.0"
description = "Enhanced A2A Protocol Demo - Comprehensive demonstration of all A2A protocol features"
authors = [
    {name = "A2A Samples Team", email = "a2a-samples@google.com"}
]
readme = "ENHANCED_DEMO_README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "a2a-sdk",
    "httpx",
    "uvicorn[standard]",
    "click",
    "python-dotenv",
    "google-genai",
    "fastapi",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
a2a-all-requests-server = "src.a2a_all_requests.enhanced_server.__main__:main"
a2a-all-requests-client = "src.a2a_all_requests.enhanced_client.__main__:main"

[project.urls]
Homepage = "https://github.com/google/a2a-samples"
Repository = "https://github.com/google/a2a-samples"
Documentation = "https://github.com/google/a2a-samples/tree/main/samples/python/agents/a2a-all-requests-without-framwork"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "a2a.*",
    "google.*",
    "uvicorn.*",
    "fastapi.*",
    "jinja2.*",
]
ignore_missing_imports = true 
